# MonkaOS

./: .gitignore  Cargo.toml  Makefile  README.MD  TODO  i386-unknown-none.json  rust-toolchain.toml
.cargo/: config.toml
.metals/: metals.mv.db
docker/: Dockerfile  build.bat  create-builder-image.bat
src/: gdt.rs  lib.rs  mutex.rs  vga_buffer.rs
src/arch/i386/: boot.s  gdt.s  grub.cfg  linker.ld  multiboot_header.s
src/drivers/intel/: mod.rs
src/drivers/network/: mod.rs
src/interrupts/: mod.rs
src/memory/: mod.rs  simple_allocator.rs
src/memory/physical/: buddy_allocator.rs  global_alloc.rs  inline_free_list.rs  mod.rs
src/memory/physical/buddy_allocator/: bitmap.rs  buddy_allocator.rs  free_list.rs  memory_area.rs  mod.rs
src/memory/physical/fixed_block_allocator/: mod.rs
src/multiboot/: memory_map.rs  mod.rs  tags.rs
src/network_stack/: arp.rs  ethernet.rs
src/pci/: mod.rs
src/pci/config_space/: base_address_register.rs  macros.rs  mod.rs
src/pci/drivers/: mod.rs
src/pci/drivers/network/: descriptors.rs  interrupts.rs  mod.rs  registers.rs
src/x86/: cpu_flags.rs  gdt.rs  io.rs  mod.rs
src/x86/interrupts/: handlers.rs  idt.rs  mod.rs  pic_8259.rs
