[package]
edition = "2021"
name = "monkaos-grub"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[profile.dev]
debug = true
debug-assertions = true
lto = "off"
opt-level = 0
overflow-checks = true
panic = "abort"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
modular-bitfield = "0.11.2"
paste = "1.0.11"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"